--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
             <div class="header-container">
                 <img id="header-img" src="images/pngegg.png" alt="">
                 <div class="top-container-menu">
-                    <span>About</span><span>Work</span><span>Notes</span>
+                    <span class="top-menu">About</span>
+                    <span class="top-menu">Work</span>
+                    <span class="top-menu">Notes</span>
                 </div>
             </div>
 
